# oxcer-agent

./: .cursorignore  .gitignore  .pre-commit-config.yaml  CLUADE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSES.md  LLAMA3_LICENSE.txt  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tauri.conf.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  codeql.yml  rust-glib-gtk-build.yml  rust-gtk-build.example.yml
OxcerLauncher/: README.md
OxcerLauncher/OxcerLauncher/: OxcerFFI.swift  OxcerLauncher-Bridging-Header.h  OxcerLauncherApp.swift  oxcer_ffi.h
OxcerLauncher/OxcerLauncher.xcodeproj/: project.pbxproj
OxcerLauncher/OxcerLauncherTests/: OxcerSwiftUIViewModelTests.swift
apps/OxcerLauncher/: README.md
apps/OxcerLauncher/OxcerLauncher/: AgentRunner.swift  AssistantBlocks.swift  ChatInputBar.swift  CloudModelSettingsView.swift  CloudSettingsViewModel.swift  ContentView.swift  KeychainHelper.swift  LLAMA3_LICENSE.txt  LlamaConsentView.swift  ModelBackendConfig.swift  ModelDownloadOverlay.swift  OxcerBackend.swift  OxcerFFI.swift  OxcerLauncher-Bridging-Header.h  OxcerLauncherApp.swift  SessionModels.swift  SettingsView.swift  SwiftAgentExecutor.swift  oxcer_ffi.swift  oxcer_ffiFFI.h
apps/OxcerLauncher/OxcerLauncher.xcodeproj/: project.pbxproj
apps/OxcerLauncher/OxcerLauncherTests/: OxcerFFITests.swift
apps/desktop/: package.json
apps/desktop-tauri/: README.md  package.json
apps/desktop-tauri/scripts/: build.mjs
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src/: main.ts
apps/oxcer-chat/: vite.config.ts
apps/oxcer-chat/src/: App.tsx  styles.css
apps/windows-launcher/: README.md
build_doc/: CLAWGUARD_NEMO_INTEGRATION_DESIGN.md  guardrails-risk-model.md  guardrails-smoke-test-commands.md  oxcer-architecture-and-guardrails.md
config/: data_sensitivity_rules.example.yaml
demo/: Test1_doc.md  Test2_doc1.md  Test2_doc10.md  Test2_doc11.md  Test2_doc12.md  Test2_doc13.md  Test2_doc14.md  Test2_doc15.md  Test2_doc16.md  Test2_doc17.md  Test2_doc18.md  Test2_doc19.md  Test2_doc2.md  Test2_doc20.md  Test2_doc3.md  Test2_doc4.md  Test2_doc5.md  Test2_doc6.md  Test2_doc7.md  Test2_doc8.md  Test2_doc9.md
docs/: AGENT_ORCHESTRATOR.md  ARCHITECTURE.md  ARCHITECTURE_CORE.md  CONFIG_SCHEMA.md  DEEP_SCAN_Settings_LLM_DataFlow.md  DEVELOPMENT.md  LAZY_LOADING_ANALYSIS.md  MEMORY_GLOBAL_ANALYSIS_AND_PLAN.md  MEMORY_GROWTH_ANALYSIS.md  PLUGIN_SYSTEM.md  REFACTOR_PLAN_SESSION_LIFETIME.md  SECURITY_ARCHITECTURE.md  VIEW_HIERARCHY_MEMORY_ANALYSIS.md  security.md
docs/gateway/: configuration.md
docs/internal/: AGENT_ORCHESTRATOR.md  ARCHITECTURE_CORE.md  CONFIG_SCHEMA.md  DEEP_SCAN_Settings_LLM_DataFlow.md  PLUGIN_SYSTEM.md  README.md  REFACTOR_PLAN_SESSION_LIFETIME.md
docs/memory/: MEMORY.md
generated_swift/: oxcer_ffi.swift  oxcer_ffiFFI.modulemap
legacy/: README.md
models/phi3-small/: README.md
oxcer-core/: Cargo.toml
oxcer-core/config/: llm_profiles.yaml  models.yaml
oxcer-core/policies/: default.yaml
oxcer-core/src/: agent_session_log.rs  cloud_provider.rs  data_sensitivity.rs  data_sensitivity_config.rs  db.rs  env_filter.rs  executor.rs  fs.rs  fsm.rs  guardrail.rs  lib.rs  llm_metrics.rs  mcp.rs  memory.rs  orchestrator.rs  prompt_sanitizer.rs  semantic_router.rs  shell.rs  subagent.rs  telemetry.rs  terminal.rs
oxcer-core/src/llm/: bootstrap.rs  config.rs  downloader.rs  hybrid.rs  mod.rs  model_downloader.rs
oxcer-core/src/llm/http_backend/: cloud.rs  gemini.rs  mod.rs  openai.rs
oxcer-core/src/llm/local_phi3/: loader.rs  mod.rs  runtime.rs
oxcer-core/src/network/: anthropic_client.rs  error.rs  gemini_client.rs  grok_client.rs  mod.rs  openai_client.rs  tools.rs
oxcer-core/src/orchestrator/: execution.rs  mod.rs  planning.rs  types.rs
oxcer-core/src/plugins/: capability_registry.rs  loader.rs  mod.rs  schema.rs
oxcer-core/src/security/: mod.rs  policy_config.rs  policy_engine.rs
oxcer-core/tests/: agent_flow_integration.rs  data_sensitivity_medium.rs  data_sensitivity_merge.rs  data_sensitivity_passwords_env.rs  data_sensitivity_ssh_keys.rs  data_sensitivity_tokens.rs  integration_workspace.rs  sprint7_integration.rs  sprint8_telemetry_integration.rs  sprint9_plugin_system.rs  sprint_orchestrator_failure.rs  sprint_policy_security.rs  sprint_telemetry_edge.rs
oxcer_ffi/: Cargo.toml  build.rs
oxcer_ffi/src/: lib.rs
oxcer_ffi/tests/: ffi_validation.rs
plugins/shell/: git_status.yaml
reference/: LICENSE  README.md
reference/apps/desktop/: tsconfig.json
reference/apps/oxcer-chat/: index.html  package.json
reference/build_doc/: guardrails-smoke-test.md  sprint.md
reference/legacy_tauri/: README.md  tauri.conf.root.json
reference/legacy_ui/: README.md  app.ts  index.html
reference/scripts/: oxcer-app-launcher.ts
reference/src/actions/: action-record.types.ts  actions-store.ts
reference/src/agents/: bash-tools.exec.ts
scripts/: check-ffi-freshness.sh  download-llama3-license.sh  regen-ffi.sh
src/: app.ts  index.html  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: app-commands.json  app-core-minimal.json  main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-oxcer-commands.toml
src-tauri/src/: commands.rs  event_log.rs  fs.rs  lib.rs  main.rs  router.rs  scrubbing_log.rs  settings.rs  telemetry_viewer.rs
src-tauri/tests/: event_log_integration.rs  sprint8_recent_sessions_integration.rs
src/agents/: pi-tools.ts
src/commands/: agent.ts
src/config/: guardrails.ts
src/guardrails/: audit.test.ts  audit.ts  nemo-eval-runner.ts  nemo-orchestrator.ts  orchestrator.ts
src/logging/: logger.ts
src/session/: session-store.ts  session.types.ts
src/tools/: guardrails-data-export.ts  guardrails-data-report.ts  guardrails-failure-tagger.ts  guardrails-nemo-tuning-plan.ts  guardrails-policy-compare.ts  guardrails-policy-suggestions.ts
test/guardrails/: nemo-eval-dataset.jsonl
website/: index.html
(+69 files in other folders)
