[package]
name = "oxcer-core"
version = "0.1.0"
edition = "2021"
description = "Core logic for Oxcer: FS Service, Shell Service, Security Policy, Logging"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs-next = "2"
futures-util = "0.3"
mime_guess = "2"
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "rustls-tls"] }
thiserror = "1"
tokenizers = "0.19"
tokio = { version = "1", features = ["fs", "io-util", "rt", "time"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
