[package]
name = "oxcer_ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI layer for Oxcer core — UTF-8 JSON in/out for Swift or other C callers"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oxcer-core = { path = "../oxcer-core" }

[dev-dependencies]
tempfile = "3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
uuid = { version = "1", features = ["v4"] }

