[package]
name = "oxcer_ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI layer for Oxcer core — UTF-8 JSON in/out for Swift or other C callers"

[lib]
crate-type = ["cdylib", "rlib"]
name = "oxcer_ffi"

[dependencies]
oxcer-core = { path = "../oxcer-core" }
# Direct dep so that llama-cpp-sys-2 build-script link directives (Metal frameworks,
# static llama/ggml libs, etc.) are applied to this crate's final cdylib link step.
# cargo:rustc-link-lib from transitive build scripts is not guaranteed to propagate
# to the cdylib linker invocation; a direct dep ensures they are always applied.
llama-cpp-sys-2 = { version = "0.1", default-features = false, features = ["metal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util"] }
uuid = { version = "1.8", features = ["v4"] }
dirs-next = "2.0"
uniffi = { version = "0.28", features = ["cli", "tokio"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-log = "0.2"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
uuid = { version = "1", features = ["v4"] }

