[package]
name = "oxcer"
version = "0.1.0"
description = "Oxcer macOS desktop launcher (Tauri v2, local binary, no web server)"
authors = ["Oxcer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

