[package]
name = "oxcer"
version = "0.1.0"
description = "Oxcer macOS desktop launcher (Tauri v2, local binary, no web server)"
authors = ["Oxcer"]
edition = "2021"

[lib]
name = "oxcer"
path = "src/lib.rs"

[features]
default = []
# Enable for `cargo test -p oxcer --features test` so tauri::test (mock context) is available
test = ["tauri/test"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
oxcer-core = { path = "../oxcer-core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"
http = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

